ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slui-geo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-snippet: |
      location /geoserver/ows {
        set $auth_header $http_authorization;
        if ($auth_header != "Bearer Be2uPsSPYlsoLFT5gXrEuoefzSV2AYirDrpcmKH") {
          return 401;
        }
        proxy_pass http://geoserver.default.svc.cluster.local:8080;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header X-Forwarded-Proto $scheme;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: geoserver.slui.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geoserver
                port:
                  number: 8080
  tls:
    - hosts:
      - geoserver.slui.dev
      secretName: slui-geo-tls
